<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/input_background_color"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/timer_listview_title"
            android:layout_width="wrap_content"
            android:textSize="@dimen/timer_title_font_size"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/timer_listview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/timer_listview_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="end"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/timer_delete"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/timer_delete"/>

        <Button
            android:id="@+id/timer_edit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/timer_edit"/>

        <Button
            android:id="@+id/timer_startstop"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/timer_start"/>

    </LinearLayout>
</LinearLayout>

