<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/todo_background"
    android:padding="5dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp">

    <ImageView
        android:id="@+id/todo_row_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:src="@drawable/baseline_drag_indicator_white_24"/>

    <TextView
        android:id="@+id/todo_row_content"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="100dp"
        android:gravity="center_vertical"
        android:textColor="@color/text"
        android:textSize="@dimen/timer_title_font_size"/>

    <Button
        android:id="@+id/todo_row_done"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/todo_button_height"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_background_green"
        android:gravity="center"
        android:text="@string/todo_done"
        android:textAlignment="gravity"
        android:textColor="@color/text"/>

    <LinearLayout
        android:id="@+id/todo_row_edit_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <Button
            android:id="@+id/todo_row_edit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/todo_button_height"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/edit"
            android:textAlignment="gravity"
            android:textColor="@color/text"/>

        <Button
            android:id="@+id/todo_row_delete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/todo_button_height"
            android:layout_gravity="center"
            android:background="@drawable/button_background_red"
            android:gravity="center"
            android:text="@string/delete"
            android:textAlignment="gravity"
            android:textColor="@color/text"/>

    </LinearLayout>
</RelativeLayout>

    <!--<LinearLayout-->
    <!--android:id="@+id/todo_row_edit_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:visibility="gone">-->

    <!--<View-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@color/text"/>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:gravity="end"-->
    <!--android:orientation="horizontal"-->
    <!--android:textAlignment="center">-->

    <!--<LinearLayout-->
    <!--android:id="@+id/todo_delete_container"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:visibility="gone">-->

    <!--<Button-->
    <!--android:id="@+id/todo_delete_cancel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/cancel"-->
    <!--android:textColor="@color/text"-->
    <!--android:textStyle="italic"/>-->

    <!--<Button-->
    <!--android:id="@+id/todo_delete_confirm"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/timer_delete"-->
    <!--android:textColor="@color/red"-->
    <!--android:textStyle="italic"/>-->
    <!--</LinearLayout>-->

    <!--<Button-->
    <!--android:id="@+id/todo_delete"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/timer_delete"-->
    <!--android:textColor="@color/text"/>-->

    <!--<Button-->
    <!--android:id="@+id/todo_edit"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/timer_edit"-->
    <!--android:textColor="@color/text"/>-->

    <!--<Button-->
    <!--android:id="@+id/todo_done"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/todo_done"-->
    <!--android:textColor="@color/text"/>-->

    <!--</LinearLayout>-->
    <!--</LinearLayout>-->

